# ChangeLog for sys-apps/pam-login
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.62 2006/01/04 21:35:12 flameeyes Exp $

*pam-login-4.0.14 (04 Jan 2006)

  04 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/pam-login-4.0.14-dots-in-usernames.patch,
  +files/pam-login-4.0.14-long-groupnames.patch, +pam-login-4.0.14.ebuild:
  Bump to version 4.0.14 to get in line with shadow. Dropped a patch, dropped
  eautoconf, updated patches.

  21 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  files/pam-login-3.17-nonls.patch, pam-login-3.17.ebuild:
  Update the nonls patch to ignore _(s) macro, to fix errors with gettext()
  function not definedusing -nls. Bug #116249.

  18 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/pam-login-3.17-nonls.patch, pam-login-3.17.ebuild:
  Added patch to actually disable nls support, to allow building on non-GLIBC
  systems.

  09 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  pam-login-4.0.12.ebuild:
  Use bindnow-flags instead of -Wl,-z,now.

  09 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
  pam-login-4.0.12.ebuild:
  Call autoconf before elibtoolizing (and use eautoconf instead). Add missing
  skey useflag. Added pam-bugs@gentoo.org as mail address for pam herd.

*pam-login-4.0.12 (24 Aug 2005)

  24 Aug 2005; Martin Schlemmer <azarah@gentoo.org>
  +files/pam-login-4.0.12-dots-in-usernames.patch,
  +files/pam-login-4.0.12-long-groupnames.patch, +pam-login-4.0.12.ebuild:
  Update version.

  23 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  pam-login-4.0.11.1-r2.ebuild:
  Don't use cp -a.

  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> pam-login-3.17.ebuild:
  Stable on mips.

*pam-login-4.0.11.1-r2 (03 Aug 2005)

  03 Aug 2005; Martin Schlemmer <azarah@gentoo.org> files/login.defs-4.0,
  +files/pam-login-4.0.5-skey.patch, +files/pam-login-4.0.11.1-SUPATH.patch,
  +files/pam-login-4.0.11.1-ngettext.patch,