@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/shadow
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.126 2006/01/10 02:32:05 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.127 2006/03/08 08:01:19 corsair Exp $
+
+  08 Mar 2006; Markus Rothe <corsair@gentoo.org> shadow-4.0.14-r1.ebuild:
+  Stable on ppc64; bug #125419
 
   10 Jan 2006; Chris PeBenito <pebenito@gentoo.org> shadow-4.0.13.ebuild,
   shadow-4.0.14-r1.ebuild:
