@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pam-login
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.62 2006/01/04 21:35:12 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.63 2006/03/08 08:00:03 corsair Exp $
+
+  08 Mar 2006; Markus Rothe <corsair@gentoo.org> pam-login-4.0.14.ebuild:
+  Stable on ppc64; bug #125419
 
 *pam-login-4.0.14 (04 Jan 2006)
 
